ARROW-16864: [Python] Allow omitting S3 external_id and session_name with role_arn (#13455)

Both external_id and session_name are optional parameters when an Assume Role authentication is requested, but omitting them would raise an error.

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>